fix: 🐛 fix scrollbar track color in dark theme

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -87,6 +87,7 @@ html {
   
     --kbd-border-color: var(--color-dark);
     --kbd-background: var(--color-dark-2);
+    --scrollbar-track-color: var(--color-dark-2);
   }
 }
 
